# meshb

./: Cargo.toml  README.md
src/: cell.rs  lib.rs  mail_parser.rs  mesh.rs  mesh_enums.rs  node.rs  patro_cell.rs  patro_mesh.rs  patro_mesh_enums.rs  patro_node.rs
src/parsers/: mail_parser.rs  mod.rs  tokens.rs
src/snapshots/: meshb__mail_parser__tests__cell_section_parser_should_work.snap  meshb__mail_parser__tests__cell_type_tag_should_work-10.snap  meshb__mail_parser__tests__cell_type_tag_should_work-11.snap  meshb__mail_parser__tests__cell_type_tag_should_work-12.snap  meshb__mail_parser__tests__cell_type_tag_should_work-14.snap  meshb__mail_parser__tests__cell_type_tag_should_work-16.snap  meshb__mail_parser__tests__cell_type_tag_should_work-17.snap  meshb__mail_parser__tests__cell_type_tag_should_work-2.snap  meshb__mail_parser__tests__cell_type_tag_should_work-20.snap  meshb__mail_parser__tests__cell_type_tag_should_work-21.snap  meshb__mail_parser__tests__cell_type_tag_should_work-3.snap  meshb__mail_parser__tests__cell_type_tag_should_work-5.snap  meshb__mail_parser__tests__cell_type_tag_should_work-6.snap  meshb__mail_parser__tests__cell_type_tag_should_work-8.snap  meshb__mail_parser__tests__cell_type_tag_should_work-9.snap  meshb__mail_parser__tests__cell_type_tag_should_work.snap  meshb__mail_parser__tests__comment_or_lineending_should_work-2.snap  meshb__mail_parser__tests__comment_or_lineending_should_work-3.snap  meshb__mail_parser__tests__comment_or_lineending_should_work.snap  (+58 more)
tests/: integration_test.rs
tests/resources/: mesh_1.mail
(+112 files in other folders)
