[package]
name = "meshb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.6.0"
derive_more = "0.99.17"
num-traits = "0.2.18"
regex = "1.10.3"
insta = "1.35.1"
nom = "7.1.3"
nom-supreme = "0.8.0"
